--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 ### Linux ###
 *~
-
+hola.c
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
